static/css/style.css
/* ... */
.masthead {
  position: relative;
  width: 100%;
  height: auto;
  min-height: 35rem;
  padding: 15rem 0;
  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.3) 0%, rgba(0, 0, 0, 0.7) 75%, #000000 100%), url(../assets/img/hero-img.jpg);
  background-position: center;
  background-repeat: no-repeat;
  background-attachment: scroll;
  background-size: cover;
}
.masthead h1 {
  font-family: "Varela Round", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
  font-size: 2.5rem;
  line-height: 3rem;
  letter-spacing: 0.1rem;
  background: linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.7));
  -webkit-text-fill-color: transparent;
  -webkit-background-clip: text;
          background-clip: text;
}

.masthead h2 {
  max-width: 20rem;
  font-size: 1rem;
}

@media (min-width: 768px) {
  .masthead h1 {
    font-size: 4rem;
    line-height: 5.5rem;
  }
}
@media (min-width: 992px) {
  .masthead {
    height: 100vh;
    padding: 0;
  }
  .masthead h1 {
    font-size: 4.5rem;
    line-height: 5.6rem;
    letter-spacing: 0.65rem;
  }
  .masthead h2 {
    max-width: 30rem;
    font-size: 1.25rem;
  }
}

.about-section {
  padding-top: 3rem;
  background: linear-gradient(to bottom, #000000 0%, rgba(0, 0, 0, 0.9) 75%, rgba(0, 0, 0, 0.8) 100%);
}

.about-section2 .featured-text {
  padding: 2rem;
}

@media (min-width: 992px) {
  .about-section2 .featured-text {
    padding: 0 0 0 2rem;
    border-left: 0.5rem solid #64a19d;
  }
}

.about-section2 .project-text {
  padding: 3rem;
  font-size: 90%;
}
@media (min-width: 992px) {
  .about-section2 .project-text {
    padding: 5rem;
  }
  .about-section2 .project-text hr {
    border-color: #64a19d;
    border-width: 0.25rem;
    width: 30%;
  }
}

.signup-section {
  padding: 10rem 0;
  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.4) 0%, rgba(0, 0, 0, 0.5) 72%, #000 92%), url("../assets/img/bg-signup.jpg");
  background-position: center;
  background-repeat: no-repeat;
  background-attachment: scroll;
  background-size: cover;
}

.form-inline input {
  box-shadow: 0 0.1875rem 0.1875rem 0 rgba(0, 0, 0, 0.1) !important;
  padding: 1.25rem 2rem;
  height: auto;
  font-family: "Varela Round", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
  font-size: 80%;
  text-transform: capitalize;
  letter-spacing: 0.15rem;
  border: 0;
}

.user-reviews-section--color {
  background: #FD7E72;
}

.contact-section{
padding-top: 3rem;
}

.contact-section .card {
  border: 0;
  border-bottom: 0.25rem solid #64a19d;
}
.contact-section .card h4 {
  font-size: 0.8rem;
  font-family: "Varela Round", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
  text-transform: uppercase;
  letter-spacing: 0.15rem;
}
.contact-section .card hr {
  border-color: #64a19d;
  border-width: 0.25rem;
  width: 3rem;
}
.contact-section .social {
  margin-top: 5rem;
}
.contact-section .social a {
  text-align: center;
  height: 3rem;
  width: 3rem;
  background: rgba(255, 255, 255, 0.1);
  border-radius: 100%;
  line-height: 3rem;
  color: rgba(255, 255, 255, 0.3);
}
.contact-section .social a:hover {
  color: rgba(255, 255, 255, 0.5);
}
.contact-section .social a:active {
  color: #fff;
}

.footer {
  padding: 5rem 0;
  background: #000;
}

/* Nav CSS Overwritting Template Class*/

.nav-btn {
  padding-left: 0.4rem;
  padding-right: 0.4rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  color: rgba(255, 255, 255, 0.5);
}

@media (min-width: 768px) {
.nav-btn {
  padding-left: 0.4rem;
  padding-right: 0.4rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  color: rgba(255, 255, 255, 0.5);
}
}

@media (min-width: 992px){
.nav-btn {
  margin-top: 1.6rem;
  margin-bottom: 1.5rem;
  margin-left: 0.5rem;
  margin-right: 0.5rem;
  padding: 0.5rem 1rem;
  color: rgba(255, 255, 255, 0.5);
}

#mainNav.navbar-shrink .nav-btn {
    color: #000000;
    margin-top: 1.1rem;
}
}

/* Landing Page's About Section */

.about-section2 {
    padding: 10rem 0;
}


.about-hr--color {
  border-color: #64a19d;
  border-width: 0.25rem;
  width: 3rem;
}

.about-icon--size {
  font-size: 3rem;   
}

.carousel .carousel-item {
  height: 23rem;
}

.carousel-item img {
    position: absolute;
    object-fit:cover;
    top: 0;
    left: 0;
    filter: brightness(0.8);
    min-height: 23rem;
}

.carousel-item::after {
    -webkit-box-shadow: inset 0 0 2rem rgba(0, 0, 0, 0.6);
    box-shadow: inset 0 0 2rem rgba(0, 0, 0, 0.5);
    position: absolute;
    top: 0;
    left: 0;
    filter: brightness(0.8);
    width: 100%;
    height: 100%;
    content: "";
}
/* User Comments Section */


.user-img-size {
    max-height: 10rem;
}


/* Text Color Class */

.text-jet {
  color: #3C3C3C;
}

.text-gainsboro {
    color: #E0E0E0;
}

.bg-color-salamon {
    background-color: #FD7E72;
}

/* Footer */

.list-style-none {
    display: flex;
    flex-direction: row;
    list-style: none;
}

.footer-ul--font-size {
    font-size: 2.5rem;
}

/* About Page */

.question-section {
    padding-top: 3rem;
    background: #F5F5F5;
    padding-bottom: 3rem;
}

.question-section .container .row .col-12 h2 {
    font-size: 3.5rem;
}

.signup-about-section {
    padding-top: 3rem;
    padding-bottom: 3rem;
    background: #F5F5F5;
}
/* ... */

